[package]

name = "terminal_thrift"
version = "0.3.1"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>",
           "Simon Génier <s@simon.coffee>",
           "Maxim Golov <maxim.golov@gmail.com>"]
description = "Thrift runtime library for rust."
repository = "https://github.com/terminalcloud/thrift"
license = "MIT"

[dependencies]
podio = "0.1"
log = "0"
ordered-float = "0"

