[package]

name = "calculator"
version = "0.0.1"
authors = ["Simon Génier <s@simon.coffee>", "Maxim Golov <maxim.golov@gmail.com>"]
build = "build.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[[bin]]
name = "proxy"
path = "src/proxy.rs"

[dependencies]
bufstream = "0.1"

[dependencies.terminal_thrift]
path = "../../lib/rs"
